public/styles.css
/* Fix user-agent */

* {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    background: #EEE;
}

section {
    position: relative;
    margin-top: 15px;
    width: 80%;
    min-height: 400px;
    height: 80%;
    margin: auto;
    background: white;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

ul {
    list-style: none;
    word-wrap: break-word;
}


/* Header */

.header {
    height: 55px;
    line-height: 55px;
    background: #66A02F;
    font-size: 14.5px;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

svg.logo {
    align-content: center;
    max-height: 50px;
    max-width: 100px;
    padding: none;
    padding-left: 5px;
    margin: none;
}


/* Pages */

.pages {
    height: 100%;
    width: 100%;
}

.page {
    height: 100%;
    position: absolute;
    width: 100%;
}


/* Login Page */

.login.page {
    background-color: rgba(0, 0, 0, .9);
}

.login.page .form {
    height: 50px;
    margin-top: -100px;
    position: absolute;
    text-align: center;
    top: 50%;
    width: 100%;
}

.login.page .form .usernameInput {
    background-color: transparent;
    border: none;
    outline: none;
    padding: 15px 0;
    text-align: center;
    width: 250px;
    border-bottom: 2px solid #eee;
}

.login.page .title {
    font-size: 150%;
}

.login.page .usernameInput {
    font-size: 100%;
}

.login.page .title,
.login.page .usernameInput {
    color: #eee;
}

input.usernameInput {
    padding: none;
    max-height: 65px;
}


/* Chat page */

.chat.page {
    display: none;
}

.chatArea {
    height: 100%;
}


/* Messages */

.log {
    color: #334C12;
    font-size: 70%;
    margin: 5px;
    text-align: center;
}

.messages {
    height: 100%;
    margin: 0;
    overflow-y: scroll;
    padding: 10px 0;
}

.message.typing .messageBody {
    color: #334C12;
}

.username {
    font-weight: 700;
    overflow: hidden;
    padding-right: 15px;
    padding-left: 5px;
    text-align: right;
}


/* Input */

.inputMessage {
    height: 50px;
    bottom: 0;
    left: 0;
    padding-left: 12px;
    position: absolute;
    right: 0;
    width: 100%;
    margin: 0;
}

